--- a/ProcessScheduler/ProcessScheduler.csproj
+++ b/ProcessScheduler/ProcessScheduler.csproj
@@ -59,6 +59,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scheduler\Process.cs" />
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="NewProcessForm.resx">
       <DependentUpon>NewProcessForm.cs</DependentUpon>
     </EmbeddedResource>
