--- a/ProcessScheduler/ProcessScheduler.csproj
+++ b/ProcessScheduler/ProcessScheduler.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{7E029076-06DB-4A15-B5ED-0BB0A7A00DC0}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ProcessScheduler</RootNamespace>
     <AssemblyName>ProcessScheduler</AssemblyName>
