--- a/ProcessScheduler/ProcessScheduler.csproj
+++ b/ProcessScheduler/ProcessScheduler.csproj
@@ -71,7 +71,10 @@
     <Compile Include="Scheduler\Process.cs" />
     <Compile Include="Scheduler\Queues\Queue.cs" />
     <Compile Include="Scheduler\Queues\Types\FCFSQueueType.cs" />
+    <Compile Include="Scheduler\Queues\Types\PriorityQueueType.cs" />
     <Compile Include="Scheduler\Queues\Types\QueueType.cs" />
+    <Compile Include="Scheduler\Queues\Types\RounRobinQueueType.cs" />
+    <Compile Include="Scheduler\Queues\Types\SRTQueueType.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
