--- a/ProcessScheduler/ProcessScheduler.csproj
+++ b/ProcessScheduler/ProcessScheduler.csproj
@@ -73,7 +73,7 @@
     <Compile Include="Scheduler\Queues\Types\FCFSQueueType.cs" />
     <Compile Include="Scheduler\Queues\Types\PriorityQueueType.cs" />
     <Compile Include="Scheduler\Queues\Types\QueueType.cs" />
-    <Compile Include="Scheduler\Queues\Types\RounRobinQueueType.cs" />
+    <Compile Include="Scheduler\Queues\Types\RoundRobinQueueType.cs" />
     <Compile Include="Scheduler\Queues\Types\SRTQueueType.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
