--- a/ProcessScheduler/ProcessScheduler.csproj
+++ b/ProcessScheduler/ProcessScheduler.csproj
@@ -53,11 +53,11 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="NewProcessForm.cs">
+    <Compile Include="EditProcessForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="NewProcessForm.Designer.cs">
-      <DependentUpon>NewProcessForm.cs</DependentUpon>
+    <Compile Include="EditProcessForm.Designer.cs">
+      <DependentUpon>EditProcessForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -78,8 +78,8 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="NewProcessForm.resx">
-      <DependentUpon>NewProcessForm.cs</DependentUpon>
+    <EmbeddedResource Include="EditProcessForm.resx">
+      <DependentUpon>EditProcessForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
