--- a/ProcessScheduler/ProcessScheduler.csproj
+++ b/ProcessScheduler/ProcessScheduler.csproj
@@ -74,7 +74,7 @@
     <Compile Include="Scheduler\Queues\Types\PriorityQueueType.cs" />
     <Compile Include="Scheduler\Queues\Types\QueueType.cs" />
     <Compile Include="Scheduler\Queues\Types\RoundRobinQueueType.cs" />
-    <Compile Include="Scheduler\Queues\Types\SRTQueueType.cs" />
+    <Compile Include="Scheduler\Queues\Types\SJFQueueType.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
